crates/rome_js_formatter/tests/specs/prettier/typescript/conformance/classes/constructorDeclarations/constructorParameters/readonlyReadonly.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "typescript\\conformance\\classes\\constructorDeclarations\\constructorParameters\\readonlyReadonly.ts"
---

# Input

```js
class C {
    readonly readonly x: number;
    constructor(readonly readonly y: number) {}
}```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,4 +1,4 @@
 class C {
-  readonly x: number;
-  constructor(readonly y: number) {}
+  readonly readonly x: number;
+  constructor(readonly readonly y: number) {}
 }
```

# Output

```js
class C {
  readonly readonly x: number;
  constructor(readonly readonly y: number) {}
}
```


# Errors
```
readonlyReadonly.ts:2:14 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × 'readonly' already seen
  
  × duplicate modifier
  
    ┌─ readonlyReadonly.ts:2:14
    │
  2 │     readonly readonly x: number;
    │              ^^^^^^^^
  
  i first seen here
  
    ┌─ readonlyReadonly.ts:2:5
    │
  2 │     readonly readonly x: number;
    │     ^^^^^^^^
  
readonlyReadonly.ts:3:26 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × 'readonly' already seen
  
  × duplicate modifier
  
    ┌─ readonlyReadonly.ts:3:26
    │
  3 │     constructor(readonly readonly y: number) {}
    │                          ^^^^^^^^
  
  i first seen here
  
    ┌─ readonlyReadonly.ts:3:17
    │
  3 │     constructor(readonly readonly y: number) {}
    │                 ^^^^^^^^
  

```


